<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:text="@string/activity_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_spotify_streamer"/>
        <Button
            android:id="@+id/btn_scores_app"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_spotify_streamer"/>
        <Button
            android:id="@+id/btn_library_app"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_library_app"/>
        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_build_it_bigger"/>
        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_xyz_reader"/>
        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_capstone"/>
    </LinearLayout>




</LinearLayout>
